[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/ui/SelectSquare.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://scenes/effects/theme.tres" type="Theme" id=4]
[ext_resource path="res://scenes/ui/Leaderboard.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/Upgrades.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ui/OptionsMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/title-infiniteshooter/title.glb" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "introduce-title"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Title:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector3( 0, 16, 0 ), Vector3( 0, 8, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "switch"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Title:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2.79397e-07, 1.5 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector3( 0, 8, 0 ), Vector3( 0, 6, -2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu/Options:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Menu/SelectSquare:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "flash_text"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AltText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2 ),
"transitions": PoolRealArray( 0.5, 2, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="MainMenu" type="Node"]
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/introduce-title = SubResource( 1 )
anims/switch = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Title" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 0 )

[node name="title" parent="Title" instance=ExtResource( 8 )]

[node name="Direct Light" type="SpotLight" parent="Title"]
transform = Transform( -0.479384, -0.674061, 0.56199, -0.341905, 0.733218, 0.587785, -0.808264, 0.0896274, -0.581958, 2.70917, 1.52453, -1.62942 )
light_energy = 5.0
spot_range = 6.67086
spot_angle = 49.3769

[node name="Indirect Light" type="SpotLight" parent="Title"]
transform = Transform( 0.36223, 0.679974, -0.637514, -0.341905, 0.733218, 0.587785, 0.867116, 0.00505608, 0.498081, -5, 2.8375, 2 )
light_energy = 4.0
spot_range = 8.75525
spot_angle = 45.5262

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="Menu"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.5
margin_top = -67.5
margin_right = 40.5
margin_bottom = 67.5
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Label" parent="Menu/Options"]
margin_right = 81.0
margin_bottom = 15.0
text = "start"
align = 1
valign = 1

[node name="Leaderboard" type="Label" parent="Menu/Options"]
margin_top = 30.0
margin_right = 81.0
margin_bottom = 45.0
text = "leaderboard"
align = 1
valign = 1

[node name="Upgrades" type="Label" parent="Menu/Options"]
margin_top = 60.0
margin_right = 81.0
margin_bottom = 75.0
text = "upgrades"
align = 1
valign = 1

[node name="Options" type="Label" parent="Menu/Options"]
margin_top = 90.0
margin_right = 81.0
margin_bottom = 105.0
text = "options"
align = 1
valign = 1

[node name="Quit" type="Label" parent="Menu/Options"]
margin_top = 120.0
margin_right = 81.0
margin_bottom = 135.0
text = "quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectSquare" parent="Menu" instance=ExtResource( 2 )]
visible = false
options_path = NodePath("../Options")

[node name="StartScreen" type="Control" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu/StartScreen"]
anims/flash_text = SubResource( 3 )

[node name="AltText" type="Label" parent="Menu/StartScreen"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.0
margin_top = 50.5
margin_right = 91.0
margin_bottom = 73.5
text = "press any key to continue"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboard" parent="Menu" instance=ExtResource( 5 )]
visible = false

[node name="Upgrades" parent="Menu" instance=ExtResource( 6 )]
visible = false

[node name="OptionsMenu" parent="Menu" instance=ExtResource( 7 )]
visible = false

[connection signal="selected" from="Menu/SelectSquare" to="." method="_on_SelectSquare_selected"]
[connection signal="settings_changed" from="Menu/OptionsMenu" to="." method="_on_OptionsMenu_settings_changed"]
